--- a/client/src/assets/style/baseStyle.css
+++ b/client/src/assets/style/baseStyle.css
@@ -366,11 +366,11 @@ body{
     }
 }
 .text-btn{
-    color: rgb(39, 39, 251);
+    color: rgb(59, 59, 237);
     outline: none;
     border: none;
     font-size: small;
-    font-weight: bold;
+    font-weight: 500;
     padding: 10px;
     cursor: pointer;
     position: relative;
