--- a/client/src/assets/style/baseStyle.css
+++ b/client/src/assets/style/baseStyle.css
@@ -132,6 +132,16 @@ body{
 
         
         }
+        .secul{
+            position: relative;
+            ul{
+                opacity: 1 !important;
+                li:nth-child(2){
+                    position: relative;
+                    opacity: 1 !important;
+                }
+            }
+        }
     }
     ul:hover li{
         opacity: .4;
@@ -587,6 +597,21 @@ form>h1>span{
                 left: 0px;
             }
         }
+    }
+}
+
+.dropdownMenu{
+    padding: 10px;
+    border: 1px solid;
+    opacity: 1 !important;
+    position: absolute;
+    top: -100px; left: 100px;
+    li{
+        gap: 5px !important;
+    }
+    li:nth-child(4){
+        border-bottom: 2px solid;
+        padding-bottom: 10px;
     }
 }
 /* .container{
