--- a/client/src/assets/style/baseStyle.css
+++ b/client/src/assets/style/baseStyle.css
@@ -662,6 +662,9 @@ form>h1>span{
     opacity: 1 !important;
     position: absolute;
     top: -100px; left: 150px;
+
+    animation: slideIn .7s ease-in forwards;
+    
     li{
         gap: 5px !important;
     }
@@ -682,6 +685,16 @@ form>h1>span{
     .routeContainer{
         top: 9vh;
     }
+}
+@keyframes slideIn {
+    from{
+        opacity: .3;
+        left: 0px;
+    }
+    to{
+        left: 150px;
+        opacity: 1;
+        }
 }
 /* .container{
     height: 80vh; width: 80vw;
