Complete frontend of Anly Login Defails

--- a/client/src/assets/style/Error404.css
+++ b/client/src/assets/style/Error404.css
@@ -41,11 +41,11 @@
   100% { transform: translate(-6px,-6px); }
 }
 
-.faceWeye{
+/* .faceWeye{
   h1{
     animation: lookAround 4s infinite;
   }
-}
+} */
 .main404 {
   position: absolute;
   z-index: 2;
