--- a/client/src/assets/style/baseStyle.css
+++ b/client/src/assets/style/baseStyle.css
@@ -377,9 +377,10 @@ body{
     border-radius: 10px;
     cursor: pointer;
     position: relative;
-    transition: all .7s ease-in-out;
+    transition: color .7s ease-in-out;
 
     &:hover{
+        transform: translateY(-3px);
         background-color: rgb(90, 90, 255);
     }
 }
@@ -395,6 +396,9 @@ body{
      
     &:hover{
         color: rgb(90, 90, 255);
+        &:hover{
+            transform: translateY(-3px);
+        }
     }
 }
 form>h1>span{
@@ -468,6 +472,10 @@ form>h1>span{
     display: flex;
     align-items: center;
     justify-content: center;
+
+    &:hover{
+        transform: translateY(-3px);
+    }
 }
 }
 
