--- a/client/src/assets/style/baseStyle.css
+++ b/client/src/assets/style/baseStyle.css
@@ -623,12 +623,12 @@ form>h1>span{
                     animation: miniLoader 3s infinite;
                 }
                 li:nth-child(5):after {
-                    border-color: #4666e5 transparent transparent; /* Indigo-600 from Tailwind palette */
+                    border-color: #0028c7 transparent transparent; /* Indigo-600 from Tailwind palette */
                     animation-direction: alternate-reverse;
                 }
 
                 li:nth-child(5):before {
-                    border-color: #10a2b9 transparent transparent; /* Emerald-500 from Tailwind palette */
+                    border-color: #e1e907 transparent transparent; /* Emerald-500 from Tailwind palette */
                 }
             }
         }
