UPdate class for new tailwind version v4

--- a/client/src/assets/style/baseStyle.css
+++ b/client/src/assets/style/baseStyle.css
@@ -78,7 +78,7 @@ body{
 }
 .Logotxt,.firstHalf{
     i,h2,p{
-        animation: bgMove 6s infinite;
+        animation: bgMove 6s linear infinite;
     }
     p{
         font-family: 'Courier New', Courier, monospace;
