--- a/client/src/assets/style/baseStyle.css
+++ b/client/src/assets/style/baseStyle.css
@@ -13,6 +13,7 @@
 }
 *{
     box-sizing: border-box;
+    font-weight: 500;
     font-family: 'Inter', ui-sans-serif, system-ui, sans-serif;
 }
 body{
