--- a/client/src/assets/style/baseStyle.css
+++ b/client/src/assets/style/baseStyle.css
@@ -18,8 +18,8 @@
 }
 body{
     margin: 0px; padding: 0px;
-    background-color: var(--bg-color);
-    /* background-image: url('https://i.postimg.cc/xTTKPMZq/purmel.jpg'); */
+    /* background-color: var(--bg-color); */
+    background-image: linear-gradient(rgba(0,0,0,.9),rgba(0,0,0,.9)), url('https://i.postimg.cc/bNSNbS5G/kiara-Anime.jpg');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
