--- a/client/src/assets/style/paseTwo.css
+++ b/client/src/assets/style/paseTwo.css
@@ -1,5 +1,5 @@
-.routeContainer{
+/* .routeContainer{
     background-image: url('https://i.postimg.cc/jS1mc6X5/katana-Girl-Black-white.jpg');
     background-position: center;
     background-size: cover;
-}
+} */
