--- a/client/src/assets/style/baseStyle.css
+++ b/client/src/assets/style/baseStyle.css
@@ -25,7 +25,7 @@
 body{
     margin: 0px; padding: 0px;
     background-color: var(--bg-color);
-    background-image: linear-gradient(rgba(0,0,0,.1),rgba(0,0,0,.1)), url('https://i.postimg.cc/bNSNbS5G/kiara-Anime.jpg');
+    background-image: linear-gradient(rgba(0,0,0,.8),rgba(0,0,0,.8)), url('https://i.postimg.cc/bNSNbS5G/kiara-Anime.jpg');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -161,7 +161,7 @@ body{
         }
     }
     ul:hover li{
-        opacity: .4;
+        opacity: .5;
     }
     ul:hover li:hover{
         opacity: .8;
@@ -212,8 +212,9 @@ body{
     height: 100%; width: 100%;
     display: flex;
     align-items: center;
-    justify-content: center;
+    flex-direction: column;
     padding: 5px;
+    position: relative;
 }
 .my-scroll{
     overflow-x: hidden;
