--- a/client/src/assets/style/baseStyle.css
+++ b/client/src/assets/style/baseStyle.css
@@ -212,7 +212,8 @@ body{
     height: 100%; width: 100%;
     display: flex;
     align-items: center;
-    flex-direction: column;
+    justify-content: center;
+    flex-wrap: wrap;
     padding: 5px;
     position: relative;
 }
@@ -338,7 +339,7 @@ body{
     flex-direction: column;
     padding: 5px;
     z-index: 20;
-    position: absolute;
+
     form{
         padding: 10px;
         display: flex;
@@ -600,6 +601,7 @@ form>h1>span{
     .routeContainer{
         width: 100vw !important;
         left: 0px !important;
+        padding-bottom: 70px;
     }
     form{
         padding: none !important;
@@ -752,7 +754,6 @@ form>h1>span{
     left: 13vw;
     top: 50px;
     z-index: -1;
-    padding-bottom: 70px;
 }
 @media (max-width:1024px) {
     .routeContainer{
