--- a/client/src/assets/style/paseTwo.css
+++ b/client/src/assets/style/paseTwo.css
@@ -94,7 +94,19 @@
             gap: 10px;
             padding: 5px;
 
-            
+            .checkBoxDiv{
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                padding: 5px;
+                padding-inline: calc(var(--spacing)*1);
+                border-radius: 15px;
+                gap: 5px;
+
+                input,label{
+                    cursor: pointer;
+                }
+            }
         }
     }
 }
