--- a/client/src/assets/style/baseStyle.css
+++ b/client/src/assets/style/baseStyle.css
@@ -25,7 +25,7 @@
 body{
     margin: 0px; padding: 0px;
     background-color: var(--bg-color);
-    /* background-image: linear-gradient(rgba(0,0,0,.8),rgba(0,0,0,.8)), url('https://i.postimg.cc/bNSNbS5G/kiara-Anime.jpg'); */
+    background-image: linear-gradient(rgba(0,0,0,.8),rgba(0,0,0,.8)), url('https://res.cloudinary.com/dcq0dge7f/image/upload/v1763306970/loser_3221/nbdcwzmnjcbalgdzheps.jpg');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
