succefully fetch post data /next step cofig socket.IO for newPOST

--- a/client/src/assets/style/paseTwo.css
+++ b/client/src/assets/style/paseTwo.css
@@ -111,3 +111,11 @@
     }
 }
 
+@media (max-width:750px) {
+    .rightPart{
+        display: none;
+    }
+    .leftPart{
+        padding: 1px !important;
+    }
+}
