--- a/client/src/assets/style/baseStyle.css
+++ b/client/src/assets/style/baseStyle.css
@@ -113,10 +113,17 @@ body{
             }
         }
         .menuContainer{
-            li{
+            .topU li{
                 span{
                     display: none;
                 }
+            }
+            .secul li ul{
+                font-size: medium;
+                
+            }
+            .secul>li>span{
+                display: none;
             }
         }
     }
@@ -160,12 +167,12 @@ body{
             }
         }
     }
-    ul:hover li{
+    /* ul:hover li{
         opacity: .5;
     }
     ul:hover li:hover{
         opacity: .8;
-    }
+    } */
 }
 /* @media (max-width:426px) {
     .routeContainer{
@@ -233,23 +240,25 @@ body{
 .my-scroll-visible::-webkit-scrollbar{
     all: unset;
     width: 8px;
-    border-radius: 5px;
+    border-radius: 16px
 }
 .my-scroll-visible::-webkit-scrollbar-track{
     background: rgba(10, 0, 0, 0.3);
     backdrop-filter: blur(6px);
     -webkit-backdrop-filter: blur(6px);
 }
+
 .my-scroll-visible::-webkit-scrollbar-thumb{
-    background-color: #0028c7;
+    background-color: #374151;  /* SLATE-600 */
     border-radius: 16px;
-    cursor: pointer;
     border: 1px solid white;
     transition: background-color .4s ease;
 }
-.my-scroll-visible::-webkit-scrollbar-thumb:hover {
-    background-color: #3e78ff;
+
+.my-scroll-visible::-webkit-scrollbar-thumb:hover{
+    background-color: #4B5563; /* SLATE-700 */
 }
+
 .cube{
     position: relative;
     transform: rotateY(0deg);
@@ -732,7 +741,7 @@ form>h1>span{
     border: 1px solid;
     opacity: 1 !important;
     position: absolute;
-    top: -150px; left: 150px;
+    top: -120px; left: 50%;
 
     animation: slideIn .7s ease-in forwards;
     
