--- a/client/src/assets/style/paseTwo.css
+++ b/client/src/assets/style/paseTwo.css
@@ -119,3 +119,19 @@
         padding: 1px !important;
     }
 }
+
+.middleWhr{
+    input{
+        all: unset;
+        padding: 10px;
+        width: 30vw;
+        border: 1px solid rgb(244, 214, 81);
+        font-size: 13px;
+        padding-left: 32px;
+        border-radius: 16px;
+    }
+    input:focus{
+        border-color: rgb(255, 149, 0) !important; 
+        box-shadow: 0 0 15px 2px rgba(207, 173, 19, 0.562);
+    }
+}
