--- a/client/src/assets/style/paseTwo.css
+++ b/client/src/assets/style/paseTwo.css
@@ -118,6 +118,9 @@
     .leftPart{
         padding: 1px !important;
     }
+    .middleWhr{
+        display: none;
+    }
 }
 
 .middleWhr{
@@ -134,4 +137,12 @@
         border-color: rgb(255, 149, 0) !important; 
         box-shadow: 0 0 15px 2px rgba(207, 173, 19, 0.562);
     }
+}
+.activeAbMenu.absoluteMenu{
+    opacity: 1;
+    left: 0px;
+    border-radius: 16px;
+    box-shadow: 0px 15px 15px 5px rgba(0, 0, 0, 0.419);
+    border: 1px 1px 1px 0px solid whitesmoke;
+    
 }
