--- a/client/src/assets/style/paseTwo.css
+++ b/client/src/assets/style/paseTwo.css
@@ -1,113 +1,16 @@
-.innerCaption{
-    flex: 1 1 0;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    padding-inline: calc(var(--spacing) * 1);
-    border: 1px solid #777;
-    border-radius: 15px;
-    padding: 10px;
-    gap: 10px;
-    
-    box-shadow: inset 0 0 25px 5px rgba(0, 0, 0 , 0.4);
-
-    .optionDiv{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-wrap: wrap;
-        gap: 10px;
-         background: rgba(50, 50, 50 , 0.4);
-        backdrop-filter: blur(10px);
-        border-radius: 8px;
-        -webkit-backdrop-filter: blur(10px);
-
-        .SecDiv{
-            padding: 20px;
-            border-bottom: 1px solid gray;
-           
-
-            select{
-                background-color: var(--bg-color);
-                color: var(--text-color);
-                border: 1px solid #444;
-                padding: 8px 12px;
-                border-radius: 8px;
-                outline: none;
-                font-size: 14px;
-                cursor: pointer;
-
-                option{
-                    background-color: var(--bg-color);
-                    color: var(--text-color);
-                }
-            }
-            select:focus{
-                border-color: rgb(20, 149, 153) ;
-            }
-        }
-    }
-
-    h2{
-        font-size: large;
-        font-weight: bold;
+select{
+    background-color: var(--bg-color);
+    color: var(--text-color);
+    border: 1px solid #444;
+    padding-left: 20px;
+    padding: 8px 12px;
+    border-radius: 8px;
+    outline: none;
+    font-size: 14px;
+    cursor: pointer;
+    option{
+        background-color: var(--bg-color);
         color: var(--text-color);
-    }
-    .controllerDiv{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-wrap: wrap;
-        gap: 10px;
-        background: rgba(50, 50, 50 , 0.4);
-        backdrop-filter: blur(10px);
-        border-radius: 8px;
-        -webkit-backdrop-filter: blur(10px);
-
-        .promulgatDiv{
-            display: flex;
-            align-items: center;
-            flex-direction: column;
-            padding: 5px;
-            gap: 10px;
-
-            textarea{
-                resize: none;
-                scrollbar-width: none;
-                height: 200px;
-                width: 300px;
-                border-radius: 15px;
-                border: 1px solid #444;
-                outline: none;
-                padding: 5px;
-            }
-            textarea::-webkit-scrollbar{
-                display: none;
-            }
-        }
-        .blockCat{
-            position: relative;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            flex-wrap: wrap;
-            gap: 10px;
-            padding: 5px;
-
-            .checkBoxDiv{
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                padding: 5px;
-                padding-inline: calc(var(--spacing)*1);
-                border-radius: 15px;
-                gap: 5px;
-
-                input,label{
-                    cursor: pointer;
-                }
-            }
-        }
     }
 }
 
@@ -186,4 +89,38 @@
   height: 2px;
   background: gray;
   transform: translateY(-50%);
+}
+
+.navBar {
+  ul {
+    li {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 5px;
+      position: relative;
+      cursor: pointer;
+
+      &::after {
+        content: "";
+        position: absolute;
+        bottom: -2px;
+        left: 50%;
+        transform: translateX(-50%) scaleX(0);
+        width: 80%;
+        height: 5px;
+        background-color: var(--p-text-color);
+        transform-origin: center;
+        transition: transform 0.7s ease-in-out;
+      }
+
+      &:hover::after {
+        transform: translateX(-50%) scaleX(1);
+      }
+    }
+  }
+}
+
+.navSlider::after{
+    transform: translateX(-50%) scaleX(0.8) !important;
 }
