--- a/client/src/assets/style/paseTwo.css
+++ b/client/src/assets/style/paseTwo.css
@@ -148,7 +148,8 @@ select{
 }
 
 .ControllerbaseCon{
-  .leftDiv,.rightDiv{
+  position: relative;
+  .leftDiv,.rightsideDiv{
     height: 100%;
     flex: 1;
     display: flex;
@@ -169,7 +170,7 @@ select{
     }
   }
 
-  .rightDiv{
+  .rightsideDiv{
     height: 100%;
     flex-direction: column !important;
   }
@@ -207,4 +208,48 @@ select{
   font-weight: bold;
   color: rgb(206, 6, 6) !important;
   border-color: rgb(206, 6, 6) !important;
+}
+
+.postCommitBtn{
+  position: relative;
+  div{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 50px;
+    transform: translateX(32px);
+    transition: all .7s;
+  }
+
+  &:hover{
+    div{
+      gap: 10px;
+      transform: translateX(0px);
+    }
+  }
+}
+
+.postingCommitBtn{
+  
+
+  div{
+    transform: translateX(0px);
+    animation: infSlider 2s forwards;
+    span{
+      display: none;
+    }
+    i{
+      rotate: 0deg;
+    }
+    
+  }
+}
+
+@keyframes infSlider {
+  from{
+    transform: translateX(-50%) translateY(6px) rotate(10deg);
+  }
+  to{
+    transform: translateX(100%) translateY(-20px) rotate(-45deg);
+  }
 }
