--- a/client/src/assets/style/baseStyle.css
+++ b/client/src/assets/style/baseStyle.css
@@ -354,12 +354,11 @@ body{
     justify-content: center;
     padding: 5px;
     z-index: 20;
-    height: 100%; width: 100%;
+    height: 100%;
     position: relative;
 
     form{
         flex: 1 1 0;
-        height: 100%; width: 100%;
         padding: 10px;
         display: flex;
         align-items: center;
