--- a/client/src/assets/style/paseTwo.css
+++ b/client/src/assets/style/paseTwo.css
@@ -247,3 +247,8 @@ select{
     transform: translateX(100%) translateY(-20px) rotate(-45deg);
   }
 }
+
+.baseContainerReset{
+  box-shadow: 0 0 20px 6px rgba(105, 105, 105, 0.419);
+  border-radius: 16px;
+}
