--- a/client/src/assets/style/baseStyle.css
+++ b/client/src/assets/style/baseStyle.css
@@ -26,7 +26,7 @@ body{
     margin: 0px; padding: 0px;
     background-color: var(--bg-color);
     /* background-image: linear-gradient(rgba(0,0,0,.8),rgba(0,0,0,.8)), url('https://i.postimg.cc/m212M1nM/local_HOst.jpg'); */
-    /* background-image: linear-gradient(rgba(0,0,0,.8),rgba(0,0,0,.8)), url('https://i.postimg.cc/bNSNbS5G/kiara_Anime.jpg'); */
+    background-image: linear-gradient(rgba(0,0,0,.8),rgba(0,0,0,.8)), url('https://i.postimg.cc/bNSNbS5G/kiara_Anime.jpg');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -779,7 +779,6 @@ form>h1>span{
     left: 13vw;
     top: 50px;
     z-index: -1;
-    padding-bottom: 10px;
     transition: all .7s;
 }
 @media (max-width:1024px) {
