--- a/client/src/assets/style/paseTwo.css
+++ b/client/src/assets/style/paseTwo.css
@@ -275,4 +275,35 @@ select{
 
 .singlePost{
   background-color: black;
+  box-shadow: inset 0 0 20px 6px rgba(105, 105, 105, 0.419);
+
+  .crntTodo{
+
+    .TodoInner{
+      display: flex;
+      align-items: center;
+      flex-direction: row;
+      gap: 5px;
+      cursor: pointer;
+
+      &:hover{
+        color: var(--text-color);
+      }
+
+      i{
+        font-size: x-large;
+      }
+      span{
+        font-size:10px;
+      }
+    }
+  }
+
+}
+
+.caption-1-5-lines {
+  display: -webkit-box;
+  overflow: hidden;
+  line-height: 1.2rem;        
+  max-height: calc(1.2rem * 1);      /* 1.5 lines */
 }
