--- a/client/src/assets/style/paseTwo.css
+++ b/client/src/assets/style/paseTwo.css
@@ -307,3 +307,26 @@ select{
   line-height: 1.2rem;        
   max-height: calc(1.2rem * 1);      /* 1.5 lines */
 }
+
+.miniDropHome{
+  padding: 10px;
+  background: linear-gradient(136deg,#110e0e,#252525);
+  z-index: 99;
+  border-radius: 16px;
+
+  ul{
+    height: 100%; width: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap: 10px;
+
+    li{
+      padding: 5px;
+      width: 100%;
+      text-align: center;
+      border-bottom: 1px solid gray;
+      cursor: pointer;
+    }
+  }
+}
