fix some known bugs /fix basBTNToobas avatar is now only webP or avif /improve post size

--- a/client/src/assets/style/baseStyle.css
+++ b/client/src/assets/style/baseStyle.css
@@ -105,6 +105,10 @@ body{
 }
 @media (max-width:1025px) {
     
+    #badBtnToobad{
+        display: none;
+    }
+
     .menuDiv{
         width: 50px;
         .Logotxt{
