--- a/client/src/assets/style/baseStyle.css
+++ b/client/src/assets/style/baseStyle.css
@@ -46,7 +46,10 @@ body{
     overflow: hidden;
 }
 .middlerWhere{
+    height: 100% !important;
     width: 100% !important;
+    z-index: 10 !important;
+
 }
 .dropDown{
     top: 100%;
@@ -782,7 +785,7 @@ form>h1>span{
     position: absolute;
     left: 13vw;
     top: 50px;
-    z-index: -1;
+    z-index: 10 !important;
     transition: all .7s;
 }
 @media (max-width:1024px) {
