--- a/client/src/assets/style/baseStyle.css
+++ b/client/src/assets/style/baseStyle.css
@@ -43,7 +43,7 @@ body{
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px); */
     position: relative; 
-    overflow: hidden;
+    overflow:unset;
 }
 .middlerWhere{
     height: 100% !important;
@@ -641,7 +641,7 @@ form>h1>span{
         height: 60px;
         width: 100%;
         flex-direction: row !important;
-        position: absolute;
+        position: fixed;
         bottom: 0px;
         margin: 0px !important;
 
