--- a/client/src/assets/style/index.css
+++ b/client/src/assets/style/index.css
@@ -20,6 +20,6 @@ html[data-theme="dark-white"]{
     --color-skin-login:rgb(255,255,255);
 }
 @utility h-screen-vh {
-  height: calc(var(--vh) * 100) !important;
+  height: 100dvh;
 }
 
