--- a/client/src/assets/style/paseTwo.css
+++ b/client/src/assets/style/paseTwo.css
@@ -274,7 +274,7 @@ select{
 }
 
 .singlePost{
-  background-color: black;
+  background-color: var(--bg-color);
   box-shadow: inset 0 0 20px 6px rgba(105, 105, 105, 0.419);
 
   .crntTodo{
