Drag the comment sheet to close for mobile display

--- a/client/src/assets/style/paseTwo.css
+++ b/client/src/assets/style/paseTwo.css
@@ -400,6 +400,7 @@ select{
 
 @media (max-width:751px) {
   .commentAndImage{
+    padding-top: 20px;
     height: 100% !important; width: 100% !important;
     .ImageCon{
       display: none !important;
