change font /customize Loader / dynamic bio in Lab

--- a/client/src/assets/style/paseTwo.css
+++ b/client/src/assets/style/paseTwo.css
@@ -431,5 +431,18 @@ select{
   }
 }
 
-/* PARENT — holds the glow */
+.loading-anim{
+  background-size: 200% 200%;
+  background-position: 100% 150%;
+  animation: 2s backgroundPositionAnim infinite;
+  animation-direction: reverse;
+}
 
+@keyframes backgroundPositionAnim {
+  0%{
+    background-position: 100% 100%;
+  }
+  100%{
+    background-position: 200% 200%;
+  }
+}
