--- a/client/src/assets/style/baseStyle.css
+++ b/client/src/assets/style/baseStyle.css
@@ -20,7 +20,7 @@
 *{
     box-sizing: border-box;
     
-    font-family: 'Inter', ui-sans-serif, system-ui, sans-serif;
+    font-family: 'Doto', sans-serif;
 }
 body{
     margin: 0px; padding: 0px;
@@ -140,9 +140,11 @@ body{
     
 }
 .menuDiv{
+    overflow: hidden;
     ul{
         padding: 10px;
         transition: all .3s ease;
+        padding-left: 20%;
         li{
             transition: all .6s ease-out;
             display: flex;
