--- a/client/src/assets/style/baseStyle.css
+++ b/client/src/assets/style/baseStyle.css
@@ -20,7 +20,12 @@
 *{
     box-sizing: border-box;
     
-    font-family: 'Doto', sans-serif;
+    font-family: "Saira", sans-serif;
+
+    /* font-weight: 500;
+    font-style: normal;
+    font-variation-settings:
+        "wdth" 112.5; */
 }
 body{
     margin: 0px; padding: 0px;
