--- a/client/src/assets/style/paseTwo.css
+++ b/client/src/assets/style/paseTwo.css
@@ -542,3 +542,13 @@ select{
     background-color: transparent;
   }
 }
+
+.NotificationHeader>p {
+  background: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  padding: 5px;
+  cursor: pointer;
+  border-radius: 10px;
+  border: 2px solid rgba(107, 107, 107, 0.529);
+}
