--- a/client/src/assets/style/paseTwo.css
+++ b/client/src/assets/style/paseTwo.css
@@ -551,4 +551,9 @@ select{
   cursor: pointer;
   border-radius: 10px;
   border: 2px solid rgba(107, 107, 107, 0.529);
+
+  &:hover{
+    background: linear-gradient(rgba(11, 39, 105, 0.4), rgba(18, 13, 95, 0.4));
+    box-shadow: 0 2px 25px rgb(200,200,200,0.2);
+  }
 }
