--- a/client/src/assets/style/baseStyle.css
+++ b/client/src/assets/style/baseStyle.css
@@ -4,18 +4,22 @@
     --text-color: #000000;
     --p-text-color:#363636;
     --login-txt-color:black;
+    --post-container: linear-gradient(145deg, #ffffff, #dde1ff);
+
 }
 [data-theme='dark-yellow']{
-    --bg-color: rgb(0, 0, 0);
+    --bg-color: #070007;
     --text-color: #fff700;
     --p-text-color:#fbff7d;
     --login-txt-color:white;
+    --post-container: linear-gradient(145deg,#12081d,#0a0412);
 }
 [data-theme='dark-white']{
-    --bg-color:rgb(0, 0, 0);
+    --bg-color: #0f1115;
     --text-color: white;
     --p-text-color:whitesmoke;
     --login-txt-color:white;
+    --post-container: linear-gradient(145deg,#12081d,#0a0412);
 }
 *{
     box-sizing: border-box;
@@ -30,9 +34,9 @@
 body{
     margin: 0px; padding: 0px;
     background-color: var(--bg-color);
-    background-image: linear-gradient(rgba(0,0,0,.8),rgba(0,0,0,.8)), url('https://i.postimg.cc/m212M1nM/local_HOst.jpg');
+    /* background-image: linear-gradient(rgba(0,0,0,.8),rgba(0,0,0,.8)), url('https://i.postimg.cc/m212M1nM/local_HOst.jpg'); */
     /* background-image: linear-gradient(rgba(0,0,0,.8),rgba(0,0,0,.8)), url('https://i.postimg.cc/bNSNbS5G/kiara_Anime.jpg'); */
-    /* background-image: linear-gradient(rgba(0,0,0,.8),rgba(0,0,0,.8)), url('https://res.cloudinary.com/dcq0dge7f/image/upload/v1767022477/BeutywithPNO_clew2l.jpg'); */
+    background-image: linear-gradient(rgba(0,0,0,.8),rgba(0,0,0,.8)), url('https://res.cloudinary.com/dcq0dge7f/image/upload/v1767022477/BeutywithPNO_clew2l.jpg');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
